# liquidhaskell-proofs

./: .gitignore  .travis.yml  README.md  README.org  proofs.cabal  stack.yaml
src/: AdditionCompiler.hs  Exercises.hs  Flatten.hs  Proofs.hs  Replicate.hs  ReverseEfficient.hs  Types.hs
src/Data/List/: Verified.hs
src/Data/Monoid/: Verified.hs
tests/: Main.hs
