name: proofs
version: 0.1.0.0
homepage: https://github.com/wkunkel/liquidhaskell-proofs#readme
author: Will Kunkel and Patrick Owen
maintainer: will@wkunkel.com
category: Formal Methods
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.org

library
  hs-source-dirs: src
  other-modules: Proofs
               , Types
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5
               , liquidhaskell >= 0.8 && < 0.9

test-suite liquid
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5
               , process >= 1.4 && < 2
               , directory >= 1.3 && < 2
